--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,9 +16,9 @@ body,
     --card-foreground: 224 71.4% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
-    --primary: 262.1 83.3% 57.8%;
+    --primary: 204 98% 21%;
     --primary-foreground: 210 20% 98%;
-    --secondary: 220 14.3% 95.9%;
+    --secondary: 91, 50%, 59%;
     --secondary-foreground: 220.9 39.3% 11%;
     --muted: 220 14.3% 95.9%;
     --muted-foreground: 220 8.9% 46.1%;
@@ -39,9 +39,9 @@ body,
     --card-foreground: 210 20% 98%;
     --popover: 224 71.4% 4.1%;
     --popover-foreground: 210 20% 98%;
-    --primary: 263.4 70% 50.4%;
+    --primary: 204 98% 21%;
     --primary-foreground: 210 20% 98%;
-    --secondary: 215 27.9% 16.9%;
+    --secondary: 91, 50%, 59%;
     --secondary-foreground: 210 20% 98%;
     --muted: 215 27.9% 16.9%;
     --muted-foreground: 217.9 10.6% 64.9%;
@@ -76,15 +76,15 @@ h6 {
 }
 
 .h1 {
-  @apply text-3xl font-black text-foreground md:text-4xl;
+  @apply text-2xl font-black text-primary md:text-4xl;
 }
 
 .h2 {
-  @apply text-2xl font-black text-foreground md:text-4xl;
+  @apply text-2xl font-black text-primary md:text-4xl;
 }
 
 .h3 {
-  @apply text-xl font-bold text-foreground md:text-2xl;
+  @apply text-xl font-bold text-primary md:text-2xl;
 }
 
 /* Swiper */
